--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,21 @@ anyio==4.3.0
 attrs==23.2.0
 backoff==2.2.1
 beautifulsoup4==4.12.3
+build==1.1.1
+CacheControl==0.14.0
 certifi==2024.2.2
+cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.3.2
+cleo==2.1.0
 click==8.1.7
+crashtest==0.4.1
+cryptography==42.0.5
 dataclasses-json==0.6.4
 dataclasses-json-speakeasy==0.5.11
-distlib==0.3.7
+dulwich==0.21.7
 emoji==2.10.1
-filelock==3.13.1
+fastjsonschema==2.19.1
 filetype==1.2.0
 frozenlist==1.4.1
 greenlet==3.0.3
@@ -22,14 +28,20 @@ grpcio-tools==1.62.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
+html2text==2024.2.26
 httpcore==1.0.4
 httpx==0.27.0
 hyperframe==6.0.1
 idna==3.6
+importlib_metadata==7.1.0
+installer==0.7.0
+jaraco.classes==3.3.1
+jeepney==0.8.0
 joblib==1.3.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==2.4
+keyring==24.3.1
 langchain==0.1.13
 langchain-community==0.0.29
 langchain-core==0.1.33
@@ -38,18 +50,25 @@ langdetect==1.0.9
 langsmith==0.1.31
 lxml==5.1.0
 marshmallow==3.20.2
+more-itertools==10.2.0
+msgpack==1.0.8
 multidict==6.0.5
 mypy-extensions==1.0.0
 nltk==3.8.1
 numpy==1.26.4
 orjson==3.9.15
 packaging==23.2
-platformdirs==4.0.0
-poetry==1.8.1
+pexpect==4.9.0
+pkginfo==1.10.0
+poetry-core==1.9.0
+poetry-plugin-export==1.7.1
 portalocker==2.8.2
 protobuf==4.25.3
+ptyprocess==0.7.0
+pycparser==2.21
 pydantic==2.6.4
 pydantic_core==2.16.3
+pyproject_hooks==1.0.0
 python-dateutil==2.8.2
 python-iso639==2024.2.7
 python-magic==0.4.27
@@ -58,18 +77,23 @@ qdrant-client==1.8.0
 rapidfuzz==3.6.1
 regex==2023.12.25
 requests==2.31.0
+requests-toolbelt==1.0.0
+SecretStorage==3.3.3
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.29
 tabulate==0.9.0
 tenacity==8.2.3
+tomlkit==0.12.4
 tqdm==4.66.2
+trove-classifiers==2024.3.25
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 unstructured==0.12.6
 unstructured-client==0.18.0
 urllib3==1.26.18
-virtualenv==20.25.0
 wrapt==1.16.0
 yarl==1.9.4
+zipp==3.18.1
